# IoT_for_fun

./: BUILD_FIXES.md  CMakeLists.txt  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  build.sh  build_cross_platform.sh  config.json  test_build.sh
examples/: simple_client.py
include/: api_server.h  database.h  device_manager.h  tplink_device.h
src/: CMakeLists.txt  api_server.cpp  database.cpp  database_fixed.cpp  device_manager.cpp  main.cpp  tplink_device.cpp
